--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
         git config --local user.name actions-user
         git config --local user.email "actions@github.com"
         git add *
+        git add data/*
         git commit -am "GH ACTION OK $(date)"
         git push origin main
       env:
