--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 
 name: Workflow 
 
-# Controls when the workflow will run s
+# Quand ça va tourner
 on:
   schedule:
   - cron:  '00 06 1,7,14,21,28 * *'
