--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,7 @@ jobs:
       run: |
         git config --local user.name actions-user
         git config --local user.email "actions@github.com"
-        git add *
-        git add data/*
+        git add /*
         git commit -am "GH ACTION OK $(date)"
         git push origin main
       env:
