--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
      # Set-up R
     - name: Install packages
       run: |
-        install.packages(c("dplyr", "stringr","rvest","lubridate","calendar","magrittr"),type="binary")
+        install.packages(c("dplyr", "stringr","rvest","lubridate","calendar","magrittr","purrr"),type="binary")
       shell: Rscript {0}
 
           
